fixed using z-index

--- a/css/6-1-2.css
+++ b/css/6-1-2.css
@@ -16,7 +16,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-shadow: 2px 2px 3px #555, -1px -1px 3px #555;
+    /* text-shadow: 2px 2px 3px #555, -1px -1px 3px #555; */
     text-align: center;
 }
 
