--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@ body {
     font-size: 13px;
     /*基準となるフォントサイズ。*/
     overflow-x: hidden;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+
 }
 
 /*画面幅900px以上の追加指定*/
@@ -134,7 +137,7 @@ a:hover {
 ---------------------------------------------------------------------------*/
 /*ヘッダーブロック*/
 .header {
-    position: fixed;
+    position: fixed; z-index: 1002;
     /* headerを追従にする */
     top: 0;
     left: 0;
@@ -207,6 +210,51 @@ main h2 span {
     /*文字間隔の上書き*/
     text-indent: 0.5em;
     /*上の行のletter-spacingと同じ値をセットする*/
+}
+
+a.btn--yoyakupage {
+    font-weight: 700;
+    line-height: 1.5;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    text-align: center;
+    vertical-align: middle;
+    text-decoration: none;
+    letter-spacing: 0.1em;
+    color: #777;
+    background-color: #d6c6af;
+    font-size: 2rem;
+    position: relative;
+    padding: 1.5rem 3rem 1.5rem 2rem;
+    border-radius: 100vh;
+    border-bottom: 5px solid #dfc8a8;
+    margin: 0;
+
+}
+
+a.btn--yoyakupage:hover {
+    color: #777;
+    background: #d6c6af;
+}
+
+a.btn--yoyakupage:before {
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
+    /* font-family: 'Font Awesome 5 Free'; */
+    font-size: 1.6rem;
+    line-height: 1;
+    position: absolute;
+    top: calc(50% - .8rem);
+    right: 1rem;
+    margin: 0;
+    padding: 0;
+    /* content: '\f054'; */
 }
 
 /*h3タグ*/
